<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:orientation="vertical" android:id="@id/scrollViewDonate" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textStyle="bold" android:textColor="#ffffffff" android:paddingLeft="15.0px" android:paddingTop="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/donate_layout_line1" android:layout_centerVertical="true" />
            <TextView android:textStyle="bold" android:textColor="#ffffffff" android:paddingLeft="15.0px" android:paddingTop="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/donate_layout_line2" android:layout_centerVertical="true" />
            <TextView android:textStyle="bold" android:textColor="#ffffffff" android:paddingLeft="15.0px" android:paddingTop="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/donate_layout_line3" android:layout_centerVertical="true" />
            <TextView android:textStyle="bold" android:textColor="#ffffffff" android:paddingLeft="15.0px" android:paddingTop="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/donate_layout_line4" android:layout_centerVertical="true" />
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:paddingLeft="15.0px" android:paddingTop="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/donate_layout_line5" android:layout_centerVertical="true" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>