<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:orientation="vertical" android:id="@id/aboutscrollview" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textStyle="bold" android:textColor="#ffffffff" android:paddingLeft="15.0px" android:paddingTop="15.0px" android:paddingRight="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_layout_version" />
            <TextView android:textColor="#ffffffff" android:layout_gravity="center_vertical" android:id="@id/versionName" android:paddingLeft="15.0px" android:paddingRight="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="- Unkown -" />
            <TextView android:textStyle="bold" android:textColor="#ffffffff" android:paddingLeft="15.0px" android:paddingTop="15.0px" android:paddingRight="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_layout_projecthome" />
            <TextView android:textSize="12.0sp" android:textColor="#ffffffff" android:textColorLink="#ffffffff" android:autoLink="web" android:paddingLeft="15.0px" android:paddingRight="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="http://android-wifi-tether.googlecode.com" />
            <TextView android:textStyle="bold" android:textColor="#ffffffff" android:paddingLeft="15.0px" android:paddingTop="15.0px" android:paddingRight="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_layout_license" />
            <TextView android:textColor="#ffffffff" android:paddingLeft="15.0px" android:paddingRight="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="GNU General Public License v3" />
            <TextView android:textSize="12.0sp" android:textColor="#ffffffff" android:textColorLink="#ffffffff" android:autoLink="web" android:id="@id/versionName" android:paddingLeft="15.0px" android:paddingRight="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="http://www.gnu.org/licenses/gpl.html" />
            <TextView android:textStyle="bold" android:textColor="#ffffffff" android:paddingLeft="15.0px" android:paddingTop="15.0px" android:paddingRight="15.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_layout_authors" />
            <TextView android:textColor="#ffffffff" android:id="@id/authors" android:paddingLeft="15.0px" android:paddingRight="15.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Empty String" />
            <TextView android:textStyle="bold" android:textColor="#ffffffff" android:paddingLeft="15.0px" android:paddingTop="15.0px" android:paddingRight="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_layout_contributors" />
            <TextView android:textColor="#ffffffff" android:paddingLeft="15.0px" android:paddingRight="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="parrothd, zodiac, drakaz, capnbry, webacoustics, pogo1975, vampirefo, kitame, Marcello de Sales, wacomalt, tekahuna, kr0w" />
            <TextView android:textStyle="bold" android:textColor="#ffffffff" android:paddingLeft="15.0px" android:paddingTop="15.0px" android:paddingRight="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_layout_software" />
            <TextView android:textSize="12.0sp" android:textColor="#ffffffff" android:textColorLink="#ffffffff" android:autoLink="web" android:paddingLeft="15.0px" android:paddingRight="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="http://www.iptables.org" />
            <TextView android:textSize="12.0sp" android:textColor="#ffffffff" android:textColorLink="#ffffffff" android:autoLink="web" android:paddingLeft="15.0px" android:paddingRight="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="http://thekelleys.org.uk/dnsmasq/doc.html" />
            <TextView android:textStyle="bold" android:textColor="#ffffffff" android:paddingLeft="15.0px" android:paddingTop="15.0px" android:paddingRight="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:textStyle="bold" android:textColor="#ffffffff" android:paddingLeft="15.0px" android:paddingTop="15.0px" android:paddingRight="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_changelog_software" />
            <TextView android:textColor="#ffffffff" android:paddingLeft="15.0px" android:paddingRight="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_changelog_detail" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>