<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_gravity="center_horizontal" android:id="@id/layoutHeaderAC" android:background="#a0909090" android:layout_width="fill_parent" android:layout_height="40.0dip">
        <TextView android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/statusAC" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="10.0px" android:layout_marginTop="15.0px" android:text="" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
        <ToggleButton android:textSize="8.0sp" android:id="@id/buttonAC" android:layout_width="80.0dip" android:layout_height="fill_parent" android:layout_marginTop="4.0dip" android:layout_marginRight="2.0dip" android:textOn="@string/accesscontrol_layout_disable" android:textOff="@string/accesscontrol_layout_enable" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <TextView android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/connectedClientsText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0px" android:layout_marginTop="10.0px" android:layout_marginBottom="5.0px" android:text="@string/accesscontrol_layout_connectedclients" />
    <ListView android:id="@*android:id/list" android:paddingBottom="10.0px" android:layout_width="fill_parent" android:layout_height="fill_parent" android:drawSelectorOnTop="false" android:layout_weight="1.0" />
    <RelativeLayout android:layout_gravity="center_horizontal" android:id="@id/layoutFooterAC" android:background="#a0909090" android:layout_width="fill_parent" android:layout_height="45.0dip">
        <Button android:textSize="10.0sp" android:id="@id/buttonApplyAC" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="20.0dip" android:text="@string/accesscontrol_layout_apply" android:layout_alignParentTop="true" />
    </RelativeLayout>
</LinearLayout>